--- a/exoticar/css/style.css
+++ b/exoticar/css/style.css
@@ -56,6 +56,7 @@ body{
 	color: #fff;
 	font-family: "Helvetica Neue", Arial, sans-serif;
 	font-size: 15px;
+	line-height: 1.4;
 
 }
 
@@ -105,6 +106,9 @@ body{
 	line-height: 60px;
 
 }
+.main-nav li a:hover{
+	color: red;
+}
 
 /*============Main===================*/
 .banner{
@@ -138,6 +142,7 @@ body{
 	text-transform: capitalize;
 	margin-top: 25px;
 	margin-bottom: 25px;
+	color: black;
 
 
 }
@@ -154,15 +159,137 @@ body{
 	box-sizing: border-box;
 	margin: 0 auto;
 }
+.learn-more:hover{
+	box-shadow: inset 0 0 50px rgba(0,0,0,0.5);
+	border: 1px solid red;
+}
+
+/*============Articles===================*/
+
+.articles{
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f9f9f9+1,f9f9f9+50,000000+50,000000+100 */
+background: rgb(249,249,249); /* Old browsers */
+background: -moz-linear-gradient(-5deg, rgba(249,249,249,1) 0%, rgba(249,249,249,1) 50%, #1b1b1b 50%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-5deg, rgba(249,249,249,1) 0%,rgba(249,249,249,1) 50%,#1b1b1b 50%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(95deg, rgba(249,249,249,1) 0%,rgba(249,249,249,1) 50%,#1b1b1b 50%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+.articles>.wrapper:after, .page-footer>.wrapper:after{
+	content: '.';
+	font-size: 0;
+	height: 1px;	
+	width: 100%;	
+	display: block;
+	clear: both;
+}
+article{
+	width: 50%;
+	float: left;
+	box-sizing: border-box;
+	padding-top: 60px;
+	
+}
+
+article:first-of-type{
+	padding-right: 65px;
+
+	color: black;	
+}
+
+article:last-of-type{
+	padding-left: 65px;
+}
+
+
+h2{
+	font-size: 36px;
+	font-weight: 300;
+}
+h2::after{
+	content: ".";
+	font-size: 0px;
+	display: block;
+	height: 2px;
+	width: 38px;
+	background: #ca0500;
+	margin: 25px 0 28px 0;
+}
+
+
+.quote{
+	font-size: 22px;
+	font-style: italic;
+	font-weight: 300px;
+	margin-bottom: 25px;
+}
+
+
+.text{
+	font-size: 15px;
+	font-weight: 300px;
+	margin-bottom: 60px;
+}
 
 
 
+/*============footer===================*/
+.page-footer{
+	background: #111111;
+	padding-top: 25px;
+}
+.footer-col{
+	width: 25%;
+	float: left;
+}
+
+.page-footer h3{
+	font-size: 13px;
+	text-transform: uppercase;
+}
+.page-footer h3::after{
+	content: ".";
+	background: #292929;
+	font-size: 0px;
+	width: 90%;
+	height: 2px;
+	display: block;
+	margin: 15px 0;
+
+}
+.page-footer li{
+	font-size: 13px;
+	color: #999;
+	line-height: 1.6;
+}
+.page-footer li:hover{
+	color: #fff;
+	cursor: pointer;
+	}
 
 
+.copy{
+	color: #585858;
+	margin-top: 32px;
+	float: right;
+}
+.social a{
+	display: block;
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background: #000;
+	color: #fff;
+	text-align: center;
+	line-height: 44px;
 
 
+}
+.social a:hover{
+	background: #fff;
+	color: #ff0000;
+	}
 
+.social li{
+	display: inline-block;
+	
 
-
-
-
+}
